--- a/-class-files/File 9/public/styles/style.css
+++ b/-class-files/File 9/public/styles/style.css
@@ -8,10 +8,11 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: rgba(0, 0, 0, 0.03);
 }
 
-header {
-    height: 550px;
+.hero {
+    height: 600px;
     background-image: url(/public/assets/bg-3.jpg);
     background-size: cover;
     background-position: center right;
@@ -63,4 +64,72 @@ header div p {
     color: white;
 
     border-bottom: 3px solid white;
+}
+
+/* === CARDS === */
+
+.cards-conatiner, .article-container {
+    text-align: center;
+    width: 80%;
+    margin: 32px auto;
+    box-shadow: 0 0 4px black;
+    background-color: white;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 16px;
+    gap: 21px;
+}
+.card {
+    width: 380px;
+}
+
+.card img {
+    width: 380px;
+}
+
+.card p {
+    text-align: left;
+    padding: 8px;
+    color: rgb(128, 128, 128);
+    background-color: rgba(78, 78, 78, 0.9);
+    color: white;
+    text-transform: uppercase;
+    margin-top: -4px;
+}
+
+/* === ARTICLE === */
+
+.article-container article {
+    text-align: left;
+    padding: 8px 8px;
+    margin: 0 14px;  
+}
+
+.article-container article header h2 {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.45); 
+    text-transform: uppercase; 
+    font-size: 22px;  
+}
+
+.article-container article p {
+    margin: 16px 0;
+}
+
+
+/* === FOOTER === */
+
+footer {
+    padding: 16px;
+    background-color: gray;
+}
+
+footer p{
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
 }
