--- a/-project-files/Projeto Fashion/public/styles/style.css
+++ b/-project-files/Projeto Fashion/public/styles/style.css
@@ -52,3 +52,142 @@ header nav {
     background-size: cover; 
     background-position: left bottom;
 }
+
+/* === MAIN.PORTIFOLIO === */
+
+.portifolio, .cards {
+    width: 82%;
+    margin: 48px auto;
+    text-align: center;
+    overflow: auto;
+}
+
+.portifolio h1 {
+    font-size: 28px;
+    letter-spacing: 1.5px;
+}
+
+.portifolio p {
+    margin-top: 24px;
+    font-size: 20px;
+    color: #777;
+}
+
+/* === MAIN.CARDS === */
+
+.card {
+    float: left;
+    width: 32%;
+}
+
+.card:nth-child(2) {
+    margin-left: 2%;
+}
+
+.card:nth-child(3) {
+    margin-left: 2%;
+}
+
+.card img {
+    width: 100%;
+}
+
+.model-name {
+    color: #444;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 7px;
+}
+
+.features {
+    color: #777;
+}
+
+/* === MAIN.ABOUT === */
+
+.about {
+    clear: both;
+    width: 82%;
+    min-height: 300px;
+    margin: auto;
+    background-image: url(/public/assets/bg_detalhe.png);
+    background-size: cover;
+    background-position: left top;
+    padding: 4%;
+    box-sizing: border-box;
+}
+
+.about h1 {
+    color: white;
+    text-transform: uppercase;
+    line-height: 40px;
+}
+
+.about p {
+    margin-top: 40px;
+    color: white;
+    max-width: 70%;
+}
+
+/* === MAIN.CONTACT === */
+
+.contact {
+    text-align: center;
+    margin: 24px 0;
+}
+
+.contact address {
+    color: #1e5357;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 24px;
+}
+
+/* === FOOTER === */
+
+footer {
+    background-color: #081a24;
+    text-align: center;
+    padding: 16px;
+}
+
+footer p {
+    color: #1e5357;
+    letter-spacing: 3px;
+}
+
+/* === MENU RESPONSIVO */
+
+@media only screen and (max-width: 600px) {
+    header nav {
+        text-align: center;
+    }
+    
+    .image-logo {
+        margin-left: 0%;
+    }
+    
+    .menu ul {
+        float: unset;
+        width: 80%;
+        margin: auto;
+    }
+    
+    .menu ul li {
+        float: unset;
+        list-style: none;
+        padding: 8px;
+        margin-right: 0;
+    }
+    
+    .menu ul li a{
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: #1e5357;
+    }
+    
+}
+
+
