--- a/-project-files/Projeto Strata/public/styles/style.css
+++ b/-project-files/Projeto Strata/public/styles/style.css
@@ -1,11 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-* {
-    border: none;
-    margin: 0;
-    padding: 0;
-}
-
 body {
     font-family: 'Roboto', sans-serif;
+    color: #777;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 35%;
+    padding: 80px 54px 72px;
+    box-sizing: border-box;
+    background-image: url(/public/assets/overlay.png), url(/public/assets/bg.jpg);
+    background-position: left top;
+    background-size: auto, cover;
+    text-align: right;
+}
+
+a {
+    transition: color 150ms linear;
+}
+
+.header-title {
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 400;
+}
+
+.header-title strong {
+    color: white;
+    font-weight: 400;
+}
+
+.header-link {
+    color: inherit;
+    text-transform: uppercase;
+    font-size: 16px;
+    text-decoration: none;
+    border-bottom: 1px dotted;
+}
+
+.header-link:hover {
+    color: #49bf9d;
+}
+
+main {
+    width: 65%;
+    margin-left: 35%;
+    padding: 80px 54px 72px;
+    box-sizing: border-box;
 }
