--- a/-project-files/Projeto Strata/public/styles/style.css
+++ b/-project-files/Projeto Strata/public/styles/style.css
@@ -22,7 +22,73 @@ header {
 }
 
 a {
-    transition: color 150ms linear;
+    text-decoration: none;
+    border-bottom: 1px dotted;
+    transition: color 150ms linear, 
+                border 150ms linear;
+    color: #49bf9d;
+}
+
+a:hover {
+    border-bottom-color: transparent;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #787878;
+    font-weight: 400;
+    margin: 0 0 1em; /* EM unidade relativa ao tamanho da fonte*/
+}
+
+h1 {
+    font-size: 36px;
+}
+
+h2 {
+    font-size: 32px;
+}
+
+h3 {
+    font-size: 28px;
+}
+
+h4 {
+    font-size: 24px;
+}
+
+h5 {
+    font-size: 20px;
+}
+
+h6 {
+    font-size: 16px;
+}
+
+p {
+    margin: 0 0 2em;
+}
+
+sub, sup {
+    font-size: 12px;
+}
+
+blockquote {
+    border-left: 5px solid #efefef;
+    margin: 2em 0;
+    padding: 0.5em 0 0.5em 1.5em;
+}
+
+code {
+    background-color: #f7f7f7;
+    border-radius: 0.35em;
+    border: 2px solid #efefef;
+    font-size: 0.9em;
+    padding: 0.25em 0.65em;
+    font-family: 'Courier New', monospace;
+    color: #929292;
+}
+
+pre code {
+    display: block;
 }
 
 .header-title {
@@ -40,8 +106,7 @@ a {
     color: inherit;
     text-transform: uppercase;
     font-size: 16px;
-    text-decoration: none;
-    border-bottom: 1px dotted;
+    
 }
 
 .header-link:hover {
