--- a/-project-files/Projeto Strata/public/styles/style.css
+++ b/-project-files/Projeto Strata/public/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+/* === FORA DE CONTEXTO === */
 body {
     font-family: 'Roboto', sans-serif;
     color: #777;
@@ -19,6 +20,14 @@ header {
     background-position: left top;
     background-size: auto, cover;
     text-align: right;
+}
+
+
+main {
+    width: 65%;
+    margin-left: 35%;
+    padding: 80px 54px 72px;
+    box-sizing: border-box;
 }
 
 a {
@@ -101,6 +110,12 @@ li {
     padding-left: 1em;
 }
 
+img {
+    max-width: 100%;
+}
+
+/* === HEADER === */
+
 .header-title {
     font-size: 20px;
     color: rgba(255, 255, 255, 0.5);
@@ -112,22 +127,48 @@ li {
     font-weight: 400;
 }
 
+header a img {
+    border-radius: 50%;
+}
+
 .header-link {
     color: inherit;
     text-transform: uppercase;
-    font-size: 16px;
-    
+    font-size: 16px;  
 }
 
 .header-link:hover {
     color: #49bf9d;
 }
 
-main {
-    width: 65%;
-    margin-left: 35%;
-    padding: 80px 54px 72px;
+/* === RECENT WORKS === */
+
+.card img {
+    border-radius: 10px;
+}
+
+input, label, textarea, select {
+    display: inline-block;
+    width: 100%;
     box-sizing: border-box;
+}
+
+input, textarea {
+    background-color: #f8f8f8;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #f0f0f0;
+    outline: none;
+    margin: 4px 0 8px;
+}
+
+input:focus, textarea:focus {
+    border: 1px solid #49bf9d;
+}
+
+textarea {
+    resize: none;
+    height: 8em;
 }
 
 .ul-alternate {
@@ -160,8 +201,31 @@ main {
 }
 
 .col-2 {
-    width: 50%;
+    width: 49%;
     float: left;
+}
+
+.col-2:first-child {
+    margin-right: 1%;
+}
+
+.col-2:last-child {
+    margin-left: 1%;
+}
+
+/* GRID */
+
+.col-2-3 {
+    width: 65%;
+    float: left;
+    /* background-color: orange; */
+}
+
+.col-1-3 {
+    width: 32%;
+    float: left;
+    margin-left: 3%;
+    /* background-color: blue; */
 }
 
 .button-default {
@@ -187,6 +251,10 @@ main {
 .button-default-full {
     display: block;
     text-align: center;
+}
+
+.button-default-big {
+    font-size: 1em;
 }
 
 .main-table {
@@ -231,4 +299,23 @@ main {
     border: 1px solid #ddd;
 }
 
+/* === FORM === */
 
+input[type="radio"], 
+input[type="checkbox"] {
+    width: auto;
+}
+
+/* === IMAGENS === */
+
+.gallery-thumb-full img,
+.gallery-thumb img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.gallery-thumb {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 8px;
+}
