--- a/-project-files/Projeto Range Hotels/public/styles/style.css
+++ b/-project-files/Projeto Range Hotels/public/styles/style.css
@@ -214,20 +214,19 @@ footer span[class^="icon"] {
 
 /* === RESPONSIVIDADE === */
 
-@media screen and (min-width: 48.75em) {
+@media screen and (min-width: 50.25em) {
 
     /* === HEADER === */
 
     header {
-        width: 90%;
-        margin: 1em auto;
+        margin: 1.5em 0;
         text-align: left;
         /* background-color: cornflowerblue; */
     }
 
     .i_container {
         float: left;
-        margin: 0.75em 0;
+        margin: 0.75em 0 0 1em;
         /* background-color: darkcyan; */
     }
     .i_container img{
@@ -242,7 +241,7 @@ footer span[class^="icon"] {
     
     .nav_container ul {
         width: 100%;
-        margin: 0.6em auto;
+        margin: 1.1em auto;
         /* background-color: cyan; */
     }
     
@@ -254,7 +253,7 @@ footer span[class^="icon"] {
     
     .nav_container ul li a {
         color: var(--main-color);
-        font-size: 1.3em;
+        font-size: 1em;
         letter-spacing: 0.2em;
         width: 8em;
         border-radius: 0.5em;
@@ -301,6 +300,14 @@ footer span[class^="icon"] {
 
     /* === SECOND SECTION === */
 
+    .spivone {
+        display: none;
+    }
+
+    .second_container {
+        margin-top: 0;
+    }
+
     .second_container article{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -326,5 +333,22 @@ footer span[class^="icon"] {
 
     .third_info {
         font-size: 1.2em;
+    }
+}
+
+@media screen and (min-width: 62.5em) {
+    /* === MAIN === */
+
+    /* === FIRST SECTION == */
+
+    .first_container {
+        background-color: var(--fourth-color);
+        background-image: url(/public/assets/bg_topo_1198x670.jpg);
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: cover;
+        height: 30em;
+        padding-top: 15em;
+        box-sizing: border-box;
     }
 }
